--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
    </div>
  </div>
 
- <div class="ui main text container">
-  <app-root>Loading...</app-root> <!-- <--- Our app loads here! -->
+ <div class="inventory-app">
+  <inventory-app-root>Loading...</inventory-app-root> <!-- <--- Our app loads here! -->
 </div> 
 
 </body>
