--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
  </div>
 
  <div class="inventory-app">
-  <inventory-app-root>Loading...</inventory-app-root> <!-- <--- Our app loads here! -->
+  <app-root>Loading...</app-root> <!-- <--- Our app loads here! -->
 </div> 
 
 </body>
